--- a/APIproject/views/index.hbs
+++ b/APIproject/views/index.hbs
@@ -9,9 +9,17 @@
 </head>
 
 <body>
+  <label for="">Filter</label>
+
+  <input id="start-date" type="date">
+  <input id="end-date" type="date">
+  <select name="" id="currency">
+    <option value="usd">USD</option>
+    <option value="eur">EUR</option>
+  </select>
+
 
   <canvas id="myChart"></canvas>
-
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script type="text/javascript" src="/javascripts/financial-data.js"></script>
